# speech_to_text

./: .gitignore  README.md  output.txt  pyproject.toml  requirements.txt  stt.py
