[project]
name = "speech-to-text"
version = "0.1.0"
description = ""
authors = [
    {name = "max-vo",email = "maximilian.voggenthaler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.59.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
